<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AseWebservice</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan</string>
    <string name="action_exit">Exit Application</string>
    <string name="action_viewtop20">View top 20</string>
    <string name="maindescription">This app demonstrates android ability to consume Sybase database webservices and query data in multiple formats\n&#8226;Making multi-threaded network requests\n&#8226;Caching downloaded images on the device\n&#8226;Working with advanced Android fragment features</string>
    <string name="maintitle">Main Tasks</string>
    <string name="barcode_name">Barcode Scan</string>
    <string name="but_start">Start Scan</string>
    <string name="but_stop">Stop Scan</string>
    <string name="but_close">Close</string>
    <string name="but_clear">Clear</string>
    <string name="dialog_title">Content</string>
    <string name="spinner">Scan key choose</string>
    <string name="defaultLabelText">Empty TextView</string>
    <string name="image_description">shows image of the barcode</string>
    <string name="DEV_OPEN_ERR">Device open failed！Software will quit！</string>
    <string name="DIA_ALERT">Warning！</string>
    <string name="DIA_CHECK">Confirm</string>
    <string name="img_detail_left">logo</string>
    <string name="img_detail_center">logo</string>
    <string name="img_detail_right">logo</string>
    <string name="img_album">Album Art</string>

    <string-array name="choose_key">
        <item>key_scan</item>
        <item>key_F1</item>
        <item>key_F2</item>
        <item>key_F3</item>
    </string-array>
    <string-array name="choose_action">
        <item>getSingleProduct</item>
        <item>getPorductCollection</item>
    </string-array>

    <string name="title_activity_act_product">Product</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_act_title_list">Top 20 Titles</string>
    <string name="title_activity_act_details">Details</string>

</resources>
